tests/paczka1/fuzzy1/91287500.err
Error in line 1: A505 A280 58,8
Error in line 3: A505 A609 84,1
Error in line 6: A505 S559 48,7
Error in line 24: fFp S559 36,2
Error in line 22: A505 A609 56,7
Error in line 26: KSRs A609 21,3
Error in line 27: fFp A505 58,0
Error in line 20: jRog8H A280 59,7
Error in line 30: KSRs A505 10,5
Error in line 34: jRog8H A505 63,7
Error in line 38: A505 A280 4,4
